# whale-spectrogram-dataset-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  tst.txt
src/: loaders.py  requirements.txt  utils.py  whales_dataset.py
src/whale_spectrogram_dataset_tools/: visualization.py  whales_dataset.py
