[project]
name = "whale-spectrogram-dataset-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "auto-mix-prep>=0.2.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
]
